@@ -54,6 +54,7 @@
 - [#526] Dialog Detail is not on top after selection second object on Mac.
 - [#532] Unexpected error occurs when zoom out image.
 - [#537] Valentina crashes when use undo command.
+- [#544] Error: Color Lines are black until touched.
 
 # Version 0.4.4 April 12, 2016
 - Updated measurement templates with all measurements. Added new template Aldrich/Women measurements.
